fix spacing for icon adapter and css cleanup

--- a/src/implementations/vanilla/src/basics/form-elements/text-field/text-field.scss
+++ b/src/implementations/vanilla/src/basics/form-elements/text-field/text-field.scss
@@ -207,6 +207,14 @@
     width: 26px;
     height: 17px;
     pointer-events: none;
+
+    .hig__icon {
+        position: relative;
+        height: 30px;
+        width: 30px;
+        bottom: 10px;
+        right: 12px;
+    }
 }
 
 .hig__text-field__clear-button {
