--- a/src/implementations/vanilla/src/components/global-nav/top-nav/project-account-switcher/_target/target.scss
+++ b/src/implementations/vanilla/src/components/global-nav/top-nav/project-account-switcher/_target/target.scss
@@ -3,7 +3,7 @@
 .hig__global-nav__top-nav__project-account-switcher__target {
     display: flex;
     align-items: center;
-    padding: 0 15px 0 10px;
+    padding: 0 12px 0 10px;
     box-sizing: border-box;
     cursor: pointer;
 }
@@ -13,8 +13,8 @@
 
     .hig__icon {
       height: 24px;
-      width: 24px;
-      padding-left: 12px;  
+      width: 10px;
+      margin-left: 12px;
     }
 }
 
